[package]
name = "core"
version = "0.1.0"
authors = ["Douglas Luman <admin@appliedpoetics.org>"]
edition = "2018"

[dependencies]
rand = "0.7.0"
regex = "1"
itertools = "0.8.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"

[[bin]]
name = "keybork"
path = "src/bin/keybork.rs"
